--- a/app/views/admin/overview/index.html.erb
+++ b/app/views/admin/overview/index.html.erb
@@ -1,3 +1,11 @@
+<%= content_for :head do %>
+    <%= javascript_include_tag "jquery.raty" %>
+    <%= javascript_include_tag "widget" %>
+    <!--<%#= javascript_tag "edit_comment_form = '#{escape_javascript(comment_form(@comment, update_comment_posts_url))}'" %>-->
+<% end %>
+
+
+
 <% @offers = Sale.all %>
 <% if params[:yigitcan] %>
     <div class="container-fluid" xmlns="http://www.w3.org/1999/html">
@@ -39,7 +47,7 @@
 
 <div class="container-fluid">
   <div class="row-fluid">
-    <div class="span12">
+    <div class="span6">
       <div class="box bordered">
         <div class="box-header">
           <i class="icon-comments"></i> Recent comments
@@ -55,19 +63,140 @@
             </div>
           </div>
         </div>
-        <div class="padded10">
-          <ul id="comment_container" class="recent-comments">
-            <%= render :partial => "index" %>
-            <% if @comments.blank? %>
-                <div class="padded">
-                  <i class="icon-info-sign"></i> <span>You dont have waiting comment... </span>
-                </div>
-            <% end %>
-          </ul>
+        <ul id="comment_container" class="recent-comments">
+          <%= render :partial => "index" %>
+          <% if @comments.blank? %>
+              <div class="padded">
+                <i class="icon-info-sign"></i> <span>You dont have waiting comment... </span>
+              </div>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+    <div class="span6">
+
+      <div class="box bordered">
+        <div class="box-header">
+          <i class="icon-link"></i> Stats
+          <div class="pull-right">
+            <div class="btn-group">
+              Page: deneme.html &nbsp;
+              <a class="dropdown-toggle" data-toggle="dropdown">
+                 <i class="icon-cog"></i>
+              </a>
+              <ul class="dropdown-menu dropdown-left">
+                <li><%= link_to "Approve All", set_all_admin_comments_path('approve'), :confirm => "Are you sure?" %></li>
+                <li><%= link_to "Reject All", set_all_admin_comments_path('reject'), :confirm => "Are you sure?" %></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="row-fluid">
+          <div class="span12">
+            <div class="padded">
+
+              <ul class="audience-alt">
+
+
+                <li>
+                  <div class="icon">
+                    <div class="big-label dark-plum text-inverse">
+                      <i class="icon-heart"></i>
+                    </div>
+                  </div>
+                  <div class="value">39</div>
+                  <div class="stat-name">Visits</div>
+
+                  <div class="percent">(+12%)</div>
+                  <div class="progress-bar audience-progress">
+                    <div class="progress progress-dark-plum">
+                      <div class="bar" style="width: 12%"></div>
+                    </div>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="icon">
+                    <div class="big-label dark-plum text-inverse">
+                      <i class="icon-heart"></i>
+                    </div>
+                  </div>
+                  <div class="value">39</div>
+                  <div class="stat-name">Likes</div>
+
+                  <div class="percent">(+12%)</div>
+                  <div class="progress-bar audience-progress">
+                    <div class="progress progress-dark-plum">
+                      <div class="bar" style="width: 12%"></div>
+                    </div>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="icon">
+                    <div class="big-label text-blue text-inverse">
+                      <i class="icon-comment"></i>
+                    </div>
+                  </div>
+                  <div class="value">18</div>
+                  <div class="stat-name">Comments</div>
+
+                  <div class="percent">(+78%)</div>
+                  <div class="progress-bar audience-progress">
+                    <div class="progress progress-text-blue">
+                      <div class="bar" style="width: 78%"></div>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+
+            </div>
+          </div>
+        </div>
+        <div class="row-fluid">
+
+          <div class="span12">
+
+            <div class="padded">
+              <div class="section-title">Quick Links</div>
+
+              <button class="big-button" href="#">
+                <i class="icon-cogs icon-large"></i>
+                <span class="button-text">Users</span>
+              </button>
+
+              <button class="big-button" href="#">
+                <i class="icon-group icon-large"></i>
+                <span class="button-text">Requests</span>
+              </button>
+
+              <button class="big-button" href="#">
+                <i class="icon-envelope icon-large"></i>
+                <span class="button-text">Messages</span>
+              </button>
+
+              <button class="big-button" href="#">
+                <i class="icon-comments icon-large"></i>
+                <span class="button-text">Comments</span>
+              </button>
+
+              <button class="big-button" href="#">
+                <i class="icon-flag icon-large"></i>
+                <span class="button-text">Events</span>
+              </button>
+
+              <button class="big-button" href="#">
+                <i class="icon-bar-chart icon-large"></i>
+                <span class="button-text">Orders</span>
+              </button>
+
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-  </div>
 
+  </div>
 </div>
+
