--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,6 +11,9 @@
   <%= stylesheet_link_tag "admin/font-awesome" %>
   <%= javascript_include_tag "admin/application" %>
   <%= javascript_include_tag "jquery_ujs" %>
+  <%= yield :head %>
+  <%= csrf_meta_tags %>
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800">
 
   <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
