--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -2,53 +2,122 @@
   <div class="row-fluid">
     <div class="span12">
       <div class="box bordered">
-      <div class="box-header">
+        <div class="box-header">
           <i class="icon-comments">&nbsp; Comments</i>
-          </div>
-          <table class="table table-strip table-bordered">
-            <thead>
-            <tr>
-              <th>Page</th>
-              <th>Created At</th>
-              <th>Message</th>
-              <th>UserName</th>
-              <th>Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            <% @comments.each do |comment| %>
-                <tr>
-                  <td>
-                    <%= comment.post.url %>
-                  </td>
-                  <td>
-                    <%= simple_date(comment.created_at) %>
-                  </td>
+        </div>
+        <div class="box inner light-gray">
+          <div class="row-fluid padded10">
 
-                  <td>
-                    <%= comment.message.truncate(25) %>
-                  </td>
-                  <td style="line-height: 24px;">
-                    <%= comment.user.username %>
-                  </td>
-                  <td>
-                    <%= link_to_with_icon "icon-edit", "Edit", edit_admin_comment_path(comment), :class => "btn btn-mini btn-info", :remote => true %>
-                    <%= link_to_with_icon "icon-ok", "Approve", admin_fire_path('approve', comment.id), :class => "btn btn-mini green", :confirm => "Are you sure?" %>
-                    <%= link_to_with_icon "icon-remove", "Reject", admin_fire_path('reject', comment.id), :class => "btn btn-mini red", :confirm => "Are you sure?" %>
-                  </td>
-                </tr>
-            <% end %>
-            </tbody>
-            <tfoot>
-            <tr>
-              <td colspan="7">
-                <%= paginate @comments, :theme => "bootstrap_theme" %>
-              </td>
-            </tr>
-            </tfoot>
-          </table>
+
+            <div class="span2 center link_div" data-link="<%= admin_comments_path %>">
+              <div class="stat-box medium-blue">
+                <i class="icon-comments-alt icon-large"></i>
+                <span class="count"><%= Comment.all.count %></span>
+                <span class="stat-text">All</span>
+              </div>
+            </div>
+
+
+            <div class="span2 center link_div" data-link="<%= admin_comments_path(:state => 'new') %>">
+              <div class="stat-box medium-blue">
+                <i class="icon-download-alt icon-large"></i>
+                <span class="count"><%= Comment.where(:state => 'new').count %></span>
+                <span class="stat-text">New</span>
+              </div>
+            </div>
+
+            <div class="span2 center link_div" data-link="<%= admin_comments_path(:state => 'approved') %>">
+              <div class="stat-box dark-blue">
+                <i class="icon-ok icon-large"></i>
+                <span class="count"><%= Comment.where(:state => 'approved').count %></span>
+                <span class="stat-text">Approved</span>
+              </div>
+            </div>
+
+            <div class="span2 center link_div" data-link="<%= admin_comments_path(:state => 'rejected') %>">
+              <div class="stat-box border-blue">
+                <i class="icon-remove icon-large"></i>
+                <span class="count"><%= Comment.where(:state => 'rejected').count %></span>
+                <span class="stat-text">Rejected</span>
+              </div>
+            </div>
+
+            <div class="span2 center link_div" data-link="<%= admin_comments_path(:state => 'agreed') %>">
+              <div class="stat-box text-blue">
+                <i class="icon-hand-right icon-large"></i>
+                <span class="count">5</span>
+                <span class="stat-text">Agreed</span>
+              </div>
+            </div>
+
+            <div class="span2 center link_div" data-link="<%= admin_comments_path(:state => 'disagreed') %>">
+              <div class="stat-box dark-blue">
+                <i class="icon-envelope icon-large"></i>
+                <span class="count">5</span>
+                <span class="stat-text">Disagreed</span>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+        <table class="table table-strip table-bordered">
+          <thead>
+          <tr>
+            <th>Page</th>
+            <th>Created At</th>
+            <th>Message</th>
+            <th>Actions</th>
+          </tr>
+          </thead>
+          <tbody>
+          <% @comments.each do |comment| %>
+              <tr>
+                <td>
+                  <%= comment.post.url %>
+                </td>
+                <td>
+                  <%= simple_date(comment.created_at) %>
+                  <br>
+                  <span class="pull-left badge <%= comment.state_color %>"><%= comment.state %></span>
+                </td>
+
+                <td>
+                  % <%= comment.percentage_avg_rate * 100 %> <br>
+                  <%= comment.user.username %>
+                  :
+                  <%= link_to comment.message.truncate(25), admin_comment_path(comment.id) %>
+                </td>
+                <td>
+                  <%= link_to_with_icon "icon-edit", "Edit", edit_admin_comment_path(comment), :class => "btn btn-mini btn-info", :remote => true %>
+                  <%= link_to_with_icon "icon-ok", "Approve", admin_fire_path('approve', comment.id), :class => "btn btn-mini green", :confirm => "Are you sure?" %>
+                  <%= link_to_with_icon "icon-remove", "Reject", admin_fire_path('reject', comment.id), :class => "btn btn-mini red", :confirm => "Are you sure?" %>
+                </td>
+              </tr>
+          <% end %>
+          </tbody>
+          <tfoot>
+          <tr>
+            <td colspan="7">
+              <%= paginate @comments, :theme => "bootstrap_theme" %>
+            </td>
+          </tr>
+          </tfoot>
+        </table>
       </div>
 
     </div>
   </div>
 </div>
+
+<script>
+    $('.link_div').on('click', function () {
+        location = $(this).data('link');
+    })
+</script>
+<style>
+    .link_div {
+        cursor: hand !important;
+        cursor: pointer !important;
+    }
+</style>
