--- a/app/views/shared/_top_nav.html.erb
+++ b/app/views/shared/_top_nav.html.erb
@@ -20,7 +20,7 @@
     <!--</li>-->
 
     <li>
-      <a href="#" class="accordion-toggle" data-toggle="collapse" data-parent="#top-acc">
+      <a href="<%= admin_comments_path(:state => 'new') %>" >
         Comments Waiting <span class="badge orange"><%= @current_store.comments.waiting.all.count %></span>
       </a>
     </li>
@@ -31,8 +31,8 @@
 
       <div class="collapsed" style="height: 0; overflow: visible;">
         <ul id="orders" class="collapse top-bar-list">
-          <li><a href="#">Approved <span class="count">(<%= @current_store.comments.approved.count %>)</span></a></li>
-          <li><a href="#">Rejected<span class="count">(<%= @current_store.comments.rejected.count %>)</span></a></li>
+          <li><a href="<%= admin_comments_path(:state => 'approved') %>">Approved <span class="count">(<%= @current_store.comments.approved.count %>)</span></a></li>
+          <li><a href="<%= admin_comments_path(:state => 'rejected') %>">Rejected<span class="count">(<%= @current_store.comments.rejected.count %>)</span></a></li>
         </ul>
       </div>
     </li>
