--- a/app/assets/stylesheets/widget.css
+++ b/app/assets/stylesheets/widget.css
@@ -91,24 +91,281 @@ ol, ul {
     background-repeat: repeat;
 }
 
-/*.postbox .post-actions {*/
-/*-webkit-transition: opacity linear .2s;*/
-/*-moz-transition: opacity linear .2s;*/
-/*-ms-transition: opacity linear .2s;*/
-/*-o-transition: opacity linear .2s;*/
-/*transition: opacity linear .2s;*/
-/*visibility: visible;*/
-/*filter: alpha(opacity=100);*/
-/*-khtml-opacity: 1;*/
-/*-moz-opacity: 1;*/
-/*opacity: 1;*/
-/*border-top: 1px dotted #c6cdd6;*/
-/*position: absolute;*/
-/*bottom: 0;*/
-/*left: 0;*/
-/*right: 0;*/
-/*height: 32px;*/
-/*}*/
+#comment-form-container {
+    min-height: 150px;
+}
+
+.postbox section {
+    padding: 14px 0 0;
+    -webkit-border-radius: 0 0 3px 3px;
+    -moz-border-radius: 0 0 3px 3px;
+    border-radius: 0 0 3px 3px;
+}
+
+.auth-section .connect {
+    position: absolute;
+}
+
+h6 {
+    font-weight: 600;
+    font-size: 11px;
+    color: #8e949c;
+    text-transform: uppercase;
+    margin: 0 0 10px;
+    line-height: 1;
+}
+
+.auth-section {
+    display: block;
+    position: relative;
+    z-index: 200;
+}
+
+.auth-section .connect .services {
+    margin: 0 0 18px;
+}
+
+.auth-section .connect .services li {
+    float: left;
+    margin: 0 5px 0 0;
+}
+
+.auth-section .connect .services li.auth-twitter a {
+    background: url("http://mediacdn.disqus.com/1363376898/img/next/social-icons.png");
+}
+
+.auth-section .connect .services a {
+    font-size: 11px;
+    display: block;
+    width: 32px;
+    height: 32px;
+    text-indent: -9999em;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .3), 0 1px 3px rgba(0, 0, 0, .08), inset 0 2px 0 rgba(255, 255, 255, .12);
+    -moz-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .3), 0 1px 3px rgba(0, 0, 0, .08), inset 0 2px 0 rgba(255, 255, 255, .12);
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .3), 0 1px 3px rgba(0, 0, 0, .08), inset 0 2px 0 rgba(255, 255, 255, .12);
+}
+
+.auth-section .guest {
+    border-left: 1px dotted #cfd5dc;
+    margin: 0 98px 0 119px;
+    padding: 0 10px 0 10px;
+    min-height: 32px;
+    position: relative;
+}
+
+.auth-section .guest p {
+    margin: 0 0 12px;
+}
+
+.auth-section .guest .guest-details.expanded {
+    display: block;
+}
+
+.auth-section .proceed {
+    position: absolute;
+    right: 0;
+    top: 15px;
+    font-size: 12px;
+}
+
+.auth-section .connect .services li.auth-facebook a {
+    background: url("http://mediacdn.disqus.com/1363376898/img/next/social-icons.png") -32px 0;
+}
+
+.login-form {
+    margin-left: 50px;
+    /*min-width: 412px;*/
+}
+
+.post-formtrue {
+    margin-left: 50px;
+}
+
+.post-formfalse {
+    margin-left: 0px !important;
+    min-width: 0px !important;
+}
+
+section#main {
+    overflow: hidden;
+    margin-left: 0px !important;
+    padding-top: 0px !important;
+}
+
+.alert {
+    padding: 0px 31px 0px 14px !important;
+}
+
+.guest-details {
+    width: 207px;
+}
+
+.nav {
+    border-bottom: 2px solid #e4e4e4;
+    border-bottom: 2px solid rgba(0, 49, 79, 0.08);
+    margin: 0 0 18px;
+    padding: 0;
+    position: relative;
+}
+
+.nav>ul {
+    clear: both;
+}
+
+.nav>ul>li {
+    float: left;
+}
+
+.nav>ul>li.share-menu {
+    float: right;
+    margin-right: 10px;
+}
+
+.nav>ul>li.user-menu {
+    float: right;
+}
+
+.nav>ul>li.share-menu .dropdown-menu .share {
+    white-space: nowrap;
+    color: #848A92;
+    font-size: 13px;
+    padding: 5px 10px;
+    position: relative;
+    font-weight: 500;
+}
+
+.dropdown-menu .share ul, .dropdown-menu .share ul>li {
+    display: inline;
+}
+
+.nav>ul>li.share-menu .dropdown-menu .share li {
+    border: 0;
+}
+
+.nav>ul>li.share-menu .dropdown-menu {
+    padding: 0;
+}
+
+.nav>ul>li.share-menu .dropdown-menu .share a {
+    padding: 0;
+}
+
+.nav>ul>li.share-menu .dropdown-menu li a {
+    padding: 5px 10px;
+}
+
+.nav>ul>li.share-menu a {
+    width: auto;
+    padding-right: 14px;
+}
+
+.nav>ul>li.user-menu .dropdown-menu {
+    left: auto;
+    right: 0;
+}
+
+.share>* a {
+    display: inline-block !important;
+    width: 18px !important;
+    height: 18px !important;
+    filter: alpha(opacity=60);
+    -khtml-opacity: .6;
+    -moz-opacity: .6;
+    opacity: .6;
+    text-indent: -9999em;
+    overflow: hidden;
+    padding: 0;
+    -webkit-transition: opacity .2s linear;
+    -moz-transition: opacity .2s linear;
+    -ms-transition: opacity .2s linear;
+    -o-transition: opacity .2s linear;
+    transition: opacity .2s linear;
+}
+
+.share .facebook a {
+    background: url("/assets/share.png") -18px 0;
+}
+
+.share .twitter a {
+    background: url("/assets/share.png") 0 0;
+}
+
+.share>* a:hover {
+    color: transparent !important;
+    background-color: transparent !important;
+}
+
+.share>* img:hover {
+    color: transparent !important;
+    background-color: transparent !important;
+}
+
+.btn-group>.dropdown-toggle {
+    padding-right: 8px;
+    padding-left: 8px;
+    -webkit-box-shadow: inset 1px 0 0 rgba(255, 255, 255, 0.125), inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 1px 0 0 rgba(255, 255, 255, 0.125), inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 1px 0 0 rgba(255, 255, 255, 0.125), inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.btn-group>.btn {
+    position: relative;
+    float: left;
+    margin-left: -1px;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+}
+
+.btn {
+    border-color: #ccc;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+}
+
+.btn {
+    display: inline-block;
+    padding: 4px 10px 4px;
+    margin-bottom: 0;
+    font-size: 13px;
+    line-height: 18px;
+    color: #333;
+    text-align: center;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+    vertical-align: middle;
+    cursor: pointer;
+    background-color: #f5f5f5;
+    background-image: -ms-linear-gradient(top, #fff, #e6e6e6);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#e6e6e6));
+    background-image: -webkit-linear-gradient(top, #fff, #e6e6e6);
+    background-image: -o-linear-gradient(top, #fff, #e6e6e6);
+    background-image: linear-gradient(top, #fff, #e6e6e6);
+    background-image: -moz-linear-gradient(top, #fff, #e6e6e6);
+    background-repeat: repeat-x;
+    border: 1px solid #ccc;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+    border-bottom-color: #b3b3b3;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
+    filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.btn-group>.btn:last-child, .btn-group>.dropdown-toggle {
+    -webkit-border-top-right-radius: 4px;
+    border-top-right-radius: 4px;
+    -webkit-border-bottom-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    -moz-border-radius-topright: 4px;
+    -moz-border-radius-bottomright: 4px;
+}
 
 .recent-comments .comment-box {
     min-height: 75px;
@@ -134,13 +391,21 @@ ol, ul {
 }
 
 /*.recent-comments .comment-box .avatar {*/
-    /*background-image: url('/assets/avatar.png');*/
+/*background-image: url('/assets/avatar.png');*/
 /*}*/
-
 
 .article-actions {
     margin-top: 10px;
+    height: auto;
+    padding: 10px;
+    padding-left: 20px;
+    font-size: 1.2em;
 }
+
+.social-links {
+    display: inline;
+}
+
 .recent-comments .comment-box .avatar {
     width: 50px;
     height: 50px;
